Create Delete chat user API and correction in user details API
